[gd_scene load_steps=4 format=3 uid="uid://ckiwcoxw7ijeu"]

[ext_resource type="Script" uid="uid://dwlqsow75ef31" path="res://main_menu.gd" id="1_t7e0r"]
[ext_resource type="PackedScene" uid="uid://dojt8sa5f1s8i" path="res://scenes/levels/bakery.tscn" id="2_wk0pr"]
[ext_resource type="PackedScene" uid="uid://cpeis6nj6gml3" path="res://scenes/levels/testscene.tscn" id="3_rmr83"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t7e0r")
main_scene = ExtResource("2_wk0pr")
test_scene = ExtResource("3_rmr83")

[node name="BG" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="BG"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BG"]
offset_left = 516.0
offset_top = 238.0
offset_right = 636.0
offset_bottom = 409.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MainSceneButton" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
text = "Main Scene"

[node name="TestSceneButton" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
text = "Test Scene"

[node name="ShopButton" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
text = "Shop"

[node name="BuildingModeButton" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
text = "Building Mode"

[node name="ExitButton" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="BG/VBoxContainer/MainSceneButton" to="." method="_on_main_scene_button_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/TestSceneButton" to="." method="_on_test_scene_button_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/BuildingModeButton" to="." method="_on_building_mode_button_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
